--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/fin-portfolio/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/fin-portfolio/logo192.png"/><link rel="manifest" href="/fin-portfolio/manifest.json"/><title>React App</title><script defer="defer" src="/fin-portfolio/static/js/main.13abaa2f.js"></script><link href="/fin-portfolio/static/css/main.a22dc098.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/fin-portfolio/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Rikith Reddy - Data Science & Financial Forensics Expert. Get professional financial analysis, spending pattern insights, and data-driven recommendations for personal finance optimization."/><meta name="keywords" content="data science, financial analysis, spending patterns, personal finance, financial forensics, data analytics, credit card analysis"/><meta name="author" content="Rikith Reddy"/><meta property="og:title" content="Rikith Reddy - Data Science & Financial Forensics"/><meta property="og:description" content="Professional financial analysis and data science services. Transform your spending data into actionable insights."/><meta property="og:type" content="website"/><meta property="og:url" content="https://rikithreddy.github.io"/><meta property="og:image" content="/fin-portfolio/assets/rikith.png"/><meta name="twitter:card" content="summary_large_image"/><meta name="twitter:title" content="Rikith Reddy - Data Science & Financial Forensics"/><meta name="twitter:description" content="Professional financial analysis and data science services."/><meta name="twitter:image" content="/fin-portfolio/assets/rikith.png"/><script type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Rikith Reddy",
+      "jobTitle": "Data Scientist & Financial Analyst",
+      "description": "Expert in financial forensics, spending pattern analysis, and data-driven insights",
+      "url": "https://rikithreddy.github.io",
+      "image": "https://rikithreddy.github.io/assets/rikith.png",
+      "sameAs": [
+        "https://www.linkedin.com/in/rikithreddy"
+      ],
+      "knowsAbout": [
+        "Data Science",
+        "Financial Analysis",
+        "Spending Pattern Recognition",
+        "Personal Finance Optimization",
+        "Credit Card Analysis",
+        "Financial Forensics"
+      ],
+      "offers": {
+        "@type": "Service",
+        "name": "Financial Data Analysis",
+        "description": "Comprehensive analysis of spending patterns and financial data to provide actionable insights"
+      }
+    }</script><title>Rikith Reddy - Data Science & Financial Forensics</title><script defer="defer" src="/fin-portfolio/static/js/main.c4f555ab.js"></script><link href="/fin-portfolio/static/css/main.a22dc098.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
